--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -16,8 +16,8 @@ project:
 tests:
   sample:
     parameters:
-      APIKey: '88e84dcd-f2dd-4dd0-96c0-113c86982992'
-      APISecret: '3TTeI5IaAFes!!!1lxq80h!Qh!8hpzP0'
+      APIKey: "$[taskcat_getenv(MY_API_KEY)]"
+      APISecret: "$[taskcat_getenv(MY_API_SECRET)]"
       BillingBucketName: 'billingbucket'
       CloudTrailBucketName: 'cloudtrailbucket'
       CurBucketName: 'curbucket'
