--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -2,17 +2,12 @@ project:
   name: cfn-abi-spotbynetapp-cloudcheckr
   owner: kjordan@netapp.com
   package_lambda: true
+  shorten_stack_name: true
+  s3_regional_buckets: false
   regions:
-  - ap-northeast-1
-  - ap-northeast-2
-  - ap-southeast-1
-  - ap-southeast-2
-  - eu-central-1
-  - eu-west-1
-  - sa-east-1
+ 
   - us-east-1
-  - us-west-1
-  - us-west-2
+
 tests:
   sample:
     parameters:
@@ -27,4 +22,4 @@ tests:
       
     regions:
     - us-east-1
-    template: templates/CCBuiltIn.json
+    template: templates/CCBuiltIn.yml
