documentation updates need to switch from pilot

--- a/templates/CCBuiltIn.yaml
+++ b/templates/CCBuiltIn.yaml
@@ -35,7 +35,7 @@ Parameters:
   pABISourceS3BucketName:
     AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
     Type: String
-    Default: aws-abi-pilot
+    Default: aws-abi
   pABIS3BucketRegion:
     AllowedPattern: ^[a-z][a-z]-[a-z]*-[0-9]*$
     Type: String
