Enable Scoutsuite automation

--- a/scripts/cleanup_config.json
+++ b/scripts/cleanup_config.json
@@ -2,5 +2,8 @@
     {
         "Type" : "S3_BUCKET",
         "Filter": "cfn-abi-spotbynetapp-cloudcheck"
+    },
+    {
+        "Filter" : "Lambda-S3-PresignedURL"
     }
 ]
