--- a/templates/CCBuiltIn.yaml
+++ b/templates/CCBuiltIn.yaml
@@ -16,6 +16,10 @@ Parameters:
     Type: String
     Description: API Secret
     NoEcho: true
+  pEnvironment:
+    Type: String
+    Description: CloudCheckr Environment(US, EU, AU, GOV)
+    NoEcho: true
   pCustomerNumber:
     AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
     Type: String
@@ -209,6 +213,8 @@ Resources:
         Ref: pAPIKey
       pAPISecret:
         Ref: pAPISecret
+      pEnvironment:
+        Ref: pEnvironment
       pCustomerNumber:
         Ref: pCustomerNumber
   rgetExternalIDFunction:
@@ -257,6 +263,8 @@ Resources:
         Ref: pAPIKey
       pAPISecret:
         Ref: pAPISecret
+      pEnvironment:
+        Ref: pEnvironment
       pCustomerNumber:
         Ref: pCustomerNumber
       AccountNumber:
@@ -322,6 +330,8 @@ Resources:
         Ref: pAPIKey
       pAPISecret:
         Ref: pAPISecret
+      pEnvironment:
+        Ref: pEnvironment
       pCustomerNumber:
         Ref: pCustomerNumber
       AccountNumber:
