--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -14,6 +14,7 @@ tests:
       pAPISecret: $[taskcat_ssm_/cloudcheckr/api_secret]
       pABISourceS3BucketName: $[taskcat_autobucket]
       pABIStagingS3Key: $[taskcat_project_name]
+      pEnvironment: $[taskcat_ssm_/cloudcheckr/environment]
       pCloudTrailBucketName: $[taskcat_ssm_/cloudcheckr/cloudtrail_bucket_name]
       pCurBucketName: $[taskcat_ssm_/cloudcheckr/cur_bucket_name]
       pCustomerNumber: $[taskcat_ssm_/cloudcheckr/customer_number]
